# funding-arbitrage

./: .gitignore  Cargo.toml  README.md  funding_accounts.txt
bot/: Cargo.toml
bot/src/: addresses.rs  args.rs  constants.rs  error.rs  lib.rs  state.rs
bot/src/services/: bot.rs  funding_relayer.rs  mod.rs
bot/src/utils/: deser.rs  mod.rs  transaction.rs  websocket_client.rs
funding-program/: Cargo.toml
funding-program/src/: error.rs  instructions.rs  lib.rs  processor.rs  state.rs  tests.rs
funding-program/src/client/: instructions.rs  state.rs
scripts/: run-test-validator.sh
