[package]
name = "funding-program"
version = "0.1.0"
edition = "2021"

[lib]
name = "funding"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = []
integration = []

[dependencies]
borsh = "0.10.3"
solana-program = "=1.16.12"
num-derive = "0.4.0"
thiserror = "1.0.48"
num-traits = "0.2.16"

[dev-dependencies]
solana-client = "=1.16.12"
solana-sdk = "=1.16.12"
tokio = "1.14.1"
bot = { package = "bot", path = "../bot" }
